--- a/homework/homework2.Rmd
+++ b/homework/homework2.Rmd
@@ -24,9 +24,9 @@ Let $H=\{3^m4^n|m,n\in\mathbb{Z}\}$.
 
 We want to show that $H\leq G=\mathbb{R}^*$. 
 
-i. Since $3\cdot 4=3^14^1$, then the identity 1 is in H. 
+i. Since $0\in \mathbb{Z}$ then for $n,m = 0$, $3^04^0=1\cdot 1=1$, meaning the identity 1 is in H. 
 
-ii. Let $a_1, a_2, b_1, b_2\in H$. Then by definition $(a_1,a_2)=3^{a_1}4^{a_2}$ and $(b_1,b_2)=3^{b_1}4^{b_2}$. So, $(a_1,a_2)(b_1,b_2)=(a_1b_1,a_2b_2)=(3^{a_1b_1}4^{a_2b_2})=(3^{a_1}3^{b_1}4^{a_2}4^{b_2})=(3^{a_1}4^{a_2}3^{b_1}4^{b_2})\in H$. $\Rightarrow$ H is closed under multiplication. 
+ii. Let $a, b, c, d\in H$. Then by definition $(a,b)=3^a4^b$ and $(c,d)=3^c4^d$. So, $(a,b)(c,d)=(3^a4^b)(3^c4^d)=3^a4^b3^c4^d=3^a3^c4^b4^d=3^{a+c}4^{b+d}=3^m4^n$. $\Rightarrow$ H is closed under multiplication. 
 
 iii. Let $a_1, a_2\in H$. Then by definition $(a_1,a_2)=3^{a_1}4^{a_2}$. So, $-(a_1,a_2)=(-a_1,-a_2)=3^{-a_1}4^{-a_2}=\frac{1}{3^{a_1}}\frac{1}{4^{a_2}}\in H$. $\Rightarrow$ H is closed under inverses. 
 
@@ -80,7 +80,7 @@ We want to show that $C\leq G$.
 
 i. Since $g=g\cdot e=e\cdot g$, the identity $e=1$ is in C. 
 
-ii. Let $a_1, a_2, b_1, b_2\in C$. Then by definition $a_1b_1=b_1a_1$ and $a_2b_2=b_2a_2$. So, $(a_1,a_2)(b_1,b_2)=(a_1b_1,a_2b_2)=(b_1a_1,b_2a_2)\in C$. $\Rightarrow$ C is closed under multiplication. 
+ii. Let $a, b\in C$. Then by definition $ab=ba$, $ax=xa$, and $bx=xb$. So, $abx=xba\in C$. $\Rightarrow$ C is closed under multiplication. 
 
 iii.  Let $a_1, a_2\in C$. Then by definition $a_1a_2=a_2a_1$. So, $-(a_1a_2)=-(a_2a_1)$. We also showed in 3 that if $ax=xa\Rightarrow a^{-1}x=xa^{-1}$. Therefore C is closed underinverses. 
 
@@ -92,7 +92,21 @@ Proof:
 
 i. Since $H\leq G$, $e\in H$. Then $e=aea^{-1}\in K$. 
 
-ii. Let $x,y\in K$. Then $x=a_1h_1a_1^{-1}$ and $y=a_2h_2a_2^{-1}$ for some $a_1,a_2\in G$ and $h_1,h_2\in H$. So, $xy^{-1}=(a_1h_1a_1^{-1})(a_2h_2a_2^{-1})^{-1}=a_1h_1a_1^{-1}a_2^{-1}h_2^{-1}a_2$. $\Rightarrow xy^{-1}\in K\Rightarrow K\leq G\quad\quad\square.$
+ii. Let $x,y\in K$. Then $x=axa^{-1}$ and $y=aya^{-1}$ for some $a\in G$ and $x,y\in H$. So, 
+
+\begin{equation}\label{5ii}
+\begin{split}
+(xy)^{-1} &= (x^{-1}y^{-1})\\
+&= a(x^{-1}y^{-1})a^{-1}\\
+&= ax^{-1}y^{-1}a^{-1}\\
+&= ax^{-1}(1)y^{-1}a^{-1}\\
+&= ax^{-1}(a^{-1}a)y^{-1}a^{-1}\\
+&= ax^{-1}a^{-1}ay^{-1}a^{-1}\\
+&= (ax^{-1}a^{-1})(ay^{-1}a^{-1})
+\end{split}
+\end{equation}
+
+$\Rightarrow (xy)^{-1}\in K\Rightarrow K\leq G\quad\quad\square.$
 
 # 6. 
 
