--- a/homework/homework3.Rmd
+++ b/homework/homework3.Rmd
@@ -24,11 +24,7 @@ $\alpha=(152)(3)(487)(6)$
 
 Show $\alpha ^3 = \epsilon.$.
 
-$\alpha = (\begin{smallmatrix} 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\ 5 & 1& 3& 8 & 2 & 6 & 4 & 7\end{smallmatrix})$
-
-$\alpha^2 = (\begin{smallmatrix} 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\ 2 & 5 & 3 & 7 & 1 & 6 & 8 & 4\end{smallmatrix})$
-
-$\alpha^3 = (\begin{smallmatrix} 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\ 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\end{smallmatrix})$
+$\alpha = (\begin{smallmatrix} 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\ 5 & 1& 3& 8 & 2 & 6 & 4 & 7\end{smallmatrix})\quad\quad\quad\alpha^2 = (\begin{smallmatrix} 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\ 2 & 5 & 3 & 7 & 1 & 6 & 8 & 4\end{smallmatrix})\quad\quad\quad\alpha^3 = (\begin{smallmatrix} 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\ 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\end{smallmatrix})$
 
 $\Rightarrow \alpha ^3=\epsilon$. 
 
@@ -47,20 +43,13 @@ Since the number of compositions of transpositions of $\beta$ is odd, the permut
 
 ## 2. Let G be a group. Prove that the function: $f:G\rightarrow G$ given by $f(x)=x^{-1}$ is a permutation of G.
 
-Define $f:G\rightarrow G$ by $f(x)=x^{-1}$. 
+To show $f:G\rightarrow G$, we need to show a rule that assigns $a\in G$ exactly one element in $f(a)\in G$.
 
-Since a permutation is a bijective we can show that $f(x)$ has an inverse $f^{-1}(x)=\frac{1}{x}$ by, 
+It is given that $f(x)=x^{-1}$ is a permutation of G, and by the definition of permutation we know that set G is a bijection from G to G.
 
-$f^{-1}(f(x))=f^{-1}(x^{-1})=f^{-1}(\frac{1}{x})=x$
-
-and 
-
-$f(f^{-1}(x))=f(\frac{1}{x})=(\frac{1}{x})^{-1}=x$
-
-Therefore, since $f(x)$ is bijective then $f:G\rightarrow G$. $\quad\quad\square$
+Therefore $f:G\rightarrow G$. $\quad\quad\square$ 
 
 ## 3. Let G be a group. Prove G is abelian if and only if the function $f(x)=x^{-1}$ is an isomorphism from G to G. (Note: By #2 we already know that $f$ is a bijection.)
-
 
 i) G is abelian $\Rightarrow$ $f(x)=x^{-1}$ is an isomorphism from G to G
 
@@ -68,9 +57,9 @@ Take any $a,b\in G$.
 
 Since G is abelian $f(ab)=f(ba)$. 
 
-We showed in 2 that f is bijective, so now we need to show that it is closed under multiplication. 
+We know from 2 that f is bijective, so now we need to show that it is closed under the group operation of multiplication. 
 
-$f(ab)=(ab)^{-1}=a^{-1}b^{-1}=f(a)f(b)$. 
+$f(a)^{-1}f(b)^{-1}=a^{-1}b^{-1}=(ab)^{-1}=f(ab)^{-1}$. 
 
 Therefore, since G is abelian $\Rightarrow$ $f(x)=x^{-1}$ is an isomorphism from G to G. 
 
@@ -92,15 +81,19 @@ f(ab) &= f(a)f(b) \quad\quad\text{, since f is an isomorphism}\\
 
 $\Rightarrow f(ab)=f(ba)$, meaning f is commutative. 
 
-Since we already prove in 2 that f is bijective, then f is abelian. 
-
 Therefore, since $f(x)=x^{-1}$ is an isomorphism from G to G $\Rightarrow$ G is abelian.
-
 
 ## 4. Let $G_1$ and $G_2$ be groups and let $f:G_1\rightarrow G_2$ be an isomorphism. Prove that if H is a subgroup of $G_1$, then $$f(H)=\{f(h)|h\in H\}$$ is a subgroup of $G_2$. 
 
+Since H is a subgroup of $G_1$ , the identity element e is in H. 
 
-### 5. Determine whether each of the following groups of size 4 is isomorphic to $\mathbb{Z}_4$ or $\mathbb{Z}_2\times \mathbb{Z}_2$. (Recall that $D_4=\{1,r,r^2,r^3,s,sr,sr^2,sr^3\}$ is the group of symmetriese of a square, where $r$ denotes a $90^\circ$ rotation clockwise and $s$ denotes a reflection about a vertical axis.)
+Now take any elements f(a) and f(b) $\in G_2$, then a,b $\in H$ and $f(a)f(b)=f(ab)$ because f is an isomorphism. 
+
+Since H is a subgroup of $G_1$ and a,b $\in H$, the element $ab^{-1}$ is in H. 
+
+Completing the proof that $f(H)\in G_2$. 
+
+## 5. Determine whether each of the following groups of size 4 is isomorphic to $\mathbb{Z}_4$ or $\mathbb{Z}_2\times \mathbb{Z}_2$. (Recall that $D_4=\{1,r,r^2,r^3,s,sr,sr^2,sr^3\}$ is the group of symmetriese of a square, where $r$ denotes a $90^\circ$ rotation clockwise and $s$ denotes a reflection about a vertical axis.)
 
 ### (a) $G_1=\{\epsilon, (12), (34), (12)(34)\}\leq S_4$
 
